<resources>
    <string name="app_name">Android Assist</string>
    <string name="app_tag_line">welcome to your new home!</string>
    <string name="camera">Camera</string>
    <string name="photo">Photos</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="mock_app">Mock</string>
    <string name="c_photo">Photo</string>
    <string name="c_video">Video</string>
    <string name="c_photo_selfie">Photo Selfie</string>
    <string name="c_video_selfie">Video Selfie</string>
    <string name="backButtonTitle">Back</string>
    <string name="takePhoto">Take Photo</string>
    <string name="takeSelfie">Take Selfie</string>
    <string name="startVideo">Start Video</string>
    <string name="text_size">Text Size</string>
    <string name="brightness">Brightness</string>
    <string name="volume">Volume</string>
    <string name="text_to_speech">Text to speech</string>
    <string name="language">Language</string>
    <string name="blindness">Color Contrast</string>
    <string name="mandarin">Mandarin</string>
    <string name="hindi">Hindi</string>
    <string name="arabic">Arabic</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="size_1">Size 1</string>
    <string name="size_2">Size 2</string>
    <string name="size_3">Size 3</string>
    <string name="size_4">Size 4</string>
    <string name="size_5">Size 5</string>
    <string name="size_6">Size 6</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="emergency_call_confirmation_text">Are you sure you want to call Emergency Services?</string>
    <string name="call_911">CALL 911</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="emergency_call">Emergency Call</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="call_contact">Call Contact</string>
    <string name="emergency_services">Emergency Services</string>
    <string name="location">Location</string>
    <string name="mute">Mute</string>
    <string name="speaker">Speaker</string>
    <string name="end_call">End Call</string>
    <string name="add_apps">Add Apps</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="discard_changes">Discard Changes</string>
</resources>
