<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsButtonsHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3"
    android:orientation="horizontal"
    android:columnOrderPreserved="false">

    <Button
        android:id="@+id/text_size"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/text_size"
        android:gravity="center"
        android:text="@string/text_size"
        android:textColor="@color/black"
        android:backgroundTint="@color/settingsButtons"
        />

    <Button
        android:id="@+id/brightness"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/brightness"
        android:gravity="center"
        android:text="@string/brightness"
        android:textColor="@color/black"
        android:backgroundTint="@color/settingsButtons"
        />

    <Button
        android:id="@+id/volume"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/volume"
        android:gravity="center"
        android:text="@string/volume"
        android:textColor="@color/black"
        android:backgroundTint="@color/settingsButtons"
        />

    <Button
        android:id="@+id/tts"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/text_to_speech"
        android:gravity="center"
        android:text="@string/text_to_speech"
        android:textColor="@color/black"
        android:backgroundTint="@color/settingsButtons"
        />

    <Button
        android:id="@+id/language"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/language"
        android:gravity="center"
        android:text="@string/language"
        android:textColor="@color/black"
        android:backgroundTint="@color/settingsButtons"
        />

    <Button
        android:id="@+id/blindness"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/blindness"
        android:gravity="center"
        android:text="@string/blindness"
        android:textColor="@color/black"
        android:backgroundTint="@color/settingsButtons"
        />
</GridLayout>