<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/settingsButtonsHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3"
    android:padding="32dp"
    android:orientation="horizontal"
    android:columnOrderPreserved="false">

    <Button
        android:id="@+id/english"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/english"
        android:gravity="center"
        android:text="@string/english"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorSecondary"/>

    <Button
        android:id="@+id/spanish"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/spanish"
        android:gravity="center"
        android:text="@string/spanish"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorSecondary"
        />

    <Button
        android:id="@+id/french"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/french"
        android:gravity="center"
        android:text="@string/french"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorSecondary"
        />

    <Button
        android:id="@+id/arabic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/arabic"
        android:gravity="center"
        android:text="@string/arabic"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorSecondary"
        />

    <Button
        android:id="@+id/hindi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/hindi"
        android:gravity="center"
        android:text="@string/hindi"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorSecondary"        />

    <Button
        android:id="@+id/mandarin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:drawableTop="@drawable/mandarin"
        android:gravity="center"
        android:text="@string/mandarin"
        android:textAllCaps="false"
        android:textColor="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorSecondary"        />
</GridLayout>