<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/textSizeButtonsHolder"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3"
    android:orientation="horizontal"
    android:columnOrderPreserved="false">

    <Button
        android:id="@+id/size_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:backgroundTint="@color/settingsButtons"
        android:drawableTop="@drawable/size_1"
        android:gravity="center"
        android:text="@string/size_1"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="12dp" />

    <Button
        android:id="@+id/size_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:backgroundTint="@color/settingsButtons"
        android:drawableTop="@drawable/size_2"
        android:gravity="center"
        android:text="@string/size_2"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <Button
        android:id="@+id/size_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:backgroundTint="@color/settingsButtons"
        android:drawableTop="@drawable/size_3"
        android:gravity="center"
        android:text="@string/size_3"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <Button
        android:id="@+id/size_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:backgroundTint="@color/settingsButtons"
        android:drawableTop="@drawable/size_4"
        android:gravity="center"
        android:text="@string/size_4"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="22dp" />

    <Button
        android:id="@+id/size_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:backgroundTint="@color/settingsButtons"
        android:drawableTop="@drawable/size_5"
        android:gravity="center"
        android:text="@string/size_5"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="24dp" />

    <Button
        android:id="@+id/size_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:backgroundTint="@color/settingsButtons"
        android:drawableTop="@drawable/size_6"
        android:gravity="center"
        android:text="@string/size_6"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="26dp" />
</GridLayout>