<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3"
    android:padding="32dp"
    android:orientation="horizontal"
    android:columnOrderPreserved="false">

    <Button
        android:id="@+id/size_1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:backgroundTint="#144C3636"
        android:drawableTop="@drawable/size_1"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/size_1"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/size_2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:backgroundTint="#144C3636"
        android:drawableTop="@drawable/size_2"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/size_2"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="20sp" />

    <Button
        android:id="@+id/size_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:backgroundTint="#144C3636"
        android:drawableTop="@drawable/size_3"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingTop="32dp"
        android:text="@string/size_3"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="22sp" />

    <Button
        android:id="@+id/size_4"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:backgroundTint="#144C3636"
        android:drawableTop="@drawable/size_4"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingTop="32dp"
        android:text="@string/size_4"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="26sp" />

    <Button
        android:id="@+id/size_5"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:backgroundTint="#144C3636"
        android:drawableTop="@drawable/size_5"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingTop="24dp"
        android:text="@string/size_5"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="28sp" />

    <Button
        android:id="@+id/size_6"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:backgroundTint="#144C3636"
        android:drawableTop="@drawable/size_6"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingTop="24dp"
        android:text="@string/size_6"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="32sp" />
</GridLayout>