<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="3"
    android:padding="32dp"
    android:orientation="horizontal"
    android:columnOrderPreserved="false">

    <Button
        android:id="@+id/english"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:drawableTop="@drawable/english"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/english"
        android:textSize="15sp"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:backgroundTint="#144C3636" />

    <Button
        android:id="@+id/spanish"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:backgroundTint="#144C3636"
        android:drawableTop="@drawable/spanish"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/spanish"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/french"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:backgroundTint="#144C3636"
        android:drawableTop="@drawable/french"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/french"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/arabic"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:backgroundTint="#144C3636"
        android:drawableTop="@drawable/arabic"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/arabic"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/hindi"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:backgroundTint="#144C3636"
        android:drawableTop="@drawable/hindi"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/hindi"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="15sp" />

    <Button
        android:id="@+id/mandarin"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_rowWeight="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:layout_margin="8dp"
        android:backgroundTint="#144C3636"
        android:drawableTop="@drawable/mandarin"
        android:drawablePadding="0dp"
        android:gravity="center"
        android:paddingTop="40dp"
        android:text="@string/mandarin"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="15sp" />
</GridLayout>