<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimary"
>

    <ImageView
        android:id="@+id/contactImage"
        android:layout_width="304dp"
        android:layout_height="273dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sosvector_2" />

    <TextView
        android:id="@+id/contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency_services"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="25sp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/contactImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/contact_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="911"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="25sp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/contact_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageButton
        android:id="@+id/mutebutton"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/mute"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/locationbutton" />

    <ImageButton
        android:id="@+id/locationbutton"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="4dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/location"
        app:layout_constraintEnd_toStartOf="@id/mutebutton"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toEndOf="@id/speakerbutton"
        app:layout_constraintTop_toTopOf="@id/speakerbutton" />

    <ImageButton
        android:id="@+id/speakerbutton"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/speaker"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact_phone_number" />

    <TextView
        android:id="@+id/speaker_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/speaker"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/speakerbutton"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="@id/speakerbutton"
        app:layout_constraintTop_toTopOf="@id/location_button_text" />

    <TextView
        android:id="@+id/location_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/location"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/locationbutton"
        app:layout_constraintStart_toStartOf="@id/locationbutton"
        app:layout_constraintTop_toBottomOf="@id/locationbutton" />

    <TextView
        android:id="@+id/mute_button_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/mute"
        android:textColor="?attr/colorOnPrimary"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@id/mutebutton"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintStart_toStartOf="@id/mutebutton"
        app:layout_constraintTop_toTopOf="@id/location_button_text" />

    <Button
        android:id="@+id/button3"
        android:layout_width="390dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/red"
        android:text="@string/end_call"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/location_button_text" />

</androidx.constraintlayout.widget.ConstraintLayout>
